Revision history for SWISH-Prog-KSx

0.01    29 Nov 2009
    * First version, released on an unsuspecting world.

0.02    1 Dec 2009
    * POD fixes

0.03    12 Dec 2009
    * support SWISH::3::Config format internally.
      Can now read Swish-e 2.4.x config files and apply
      them to Swish3 format.

0.04    02 Jan 2010
    * fix mem leaks, config use.

0.05    07 Jan 2009
    * add fielded search support.

0.06    xxx
    * add properties to index as stored but non-analyzed fields.
    * alias_for meta/props not created as fields (TODO queryparser
      mapping)
