@@ -3,7 +3,14 @@
  <PropertyNames>
   <foobar />
   <bar alias_for="foobar" />
+  <date />
+  <timestamp />
  </PropertyNames>
+ <MetaNames>
+  <date />
+  <timestamp />
+  <foobar /><!-- NO alias bar -->
+ </MetaNames>
  <TagAlias>
   <swishdescription>foo</swishdescription>
  </TagAlias>
