@@ -1,7 +1,8 @@
 <html>
  <head>
   <title>test html doc</title>
-  <meta name="date" content="20100112" />
+  <meta name="date" content="2009-01-12" />
+  <meta name="timestamp" content="20090112" />
  </head>
  <body>
   <p>some text foo bar here</p>
